--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,6 @@ h1.s-3L, h2.s-3L, h3.s-3L, h4.s-3L, h5.s-3L, h6.s-3L, p.s-3L, a.s-3L, span.s-3L,
 }
 h1.s-kome, h2.s-kome, h3.s-kome, h4.s-kome, h5.s-kome, h6.s-kome, p.s-kome, a.s-kome, span.s-kome, label.s-kome, button.s-kome {
   font-size: 1rem;
-  color: #dacebc;
   transform: scale(0.8);
 }
 @media (width >= 768px) {
@@ -4683,6 +4682,10 @@ button.swiper-pagination-bullet {
 }
 .c-contents_title.-owner::before {
   content: "OWNER VOICE";
+  white-space: nowrap;
+}
+.c-contents_title.-torikumi::before {
+  content: "MAIN EFFORTS";
   white-space: nowrap;
 }
 .c-contents_title.-sample::before {
