--- a/scss/components/_common.scss
+++ b/scss/components/_common.scss
@@ -27,6 +27,14 @@
     width: 90%;
     margin: auto;
 }
+.w85{
+    width: 85%;
+    margin: auto;
+}
+.w75{
+    width: 75%;
+    margin: auto;
+}
 .w95s{
     @include max(768){
         width: 95% !important;
@@ -36,6 +44,12 @@
 .w90s{
     @include max(768){
         width: 90% !important;
+        margin: auto;
+    }
+}
+.w85s{
+    @include max(768){
+        width: 85% !important;
         margin: auto;
     }
 }
