--- a/scss/components/_flex.scss
+++ b/scss/components/_flex.scss
@@ -282,24 +282,13 @@
     }
     // コンテンツカラム（sp:pc 2:4）
     &.-col2_4{
+        flex-wrap: wrap;
         li{
             @include max(768){
-                width: calc(50% - 5px);
-                &:nth-child(odd){margin-right: 5px;}
-                &:nth-child(even){margin-left: 5px;}
+                width: 47.5%;
             }
             @include min(768){
-                width: calc(25% - 10px);
-                &:nth-child(1){margin-right: 10px;}
-                &:nth-child(2),
-                &:nth-child(3){margin: 0 5px;}
-                &:nth-child(4){margin-left: 10px;}
-            }
-            &.text{
-                @include min(768){width: calc(35% - 15px);}
-            }
-            &.img{
-                @include min(768){width: calc(65% - 15px);}
+                width: 23.5%;
             }
         }
     }
