--- a/scss/setting/_color.scss
+++ b/scss/setting/_color.scss
@@ -9,7 +9,7 @@ $main-color--tel: #df2323;
 // サイト独自のカラー(3色 : 若い数字の方がよりメインカラー)
 $site-color01: #4977bc6c;// 薄い色
 $site-color02: #4977bc;// 濃い色
-$site-color03: #f2d341;
+$site-color03: #6a4928;
 $site-color04: #a0a0a0;
 $site-color_kome: #dacebc;
 
