--- a/scss/components/_title.scss
+++ b/scss/components/_title.scss
@@ -3,7 +3,6 @@
 .c-contents_title{// s-L相当
     position: relative;
     font-size: 1.6rem;
-    font-weight: bold;
     padding: 0 1px;
     @include min(768){
         font-size: clamp(1.6rem, 2vw, 2.5rem);
@@ -60,6 +59,16 @@
     &.-gaikou{&::before{content: "EXTERIOR";}}                                      // 外構・外観
     &.-naikan{&::before{content: "NTROSPECTION";}}                                  // 内観
     &.-naikanDesign{&::before{content: "INNER DESIGN";}}                            // 内観デザイン
+
+    &.-landscape{&::before{content: "LANDSCAPE";}}                                  // 内観デザイン
+    &.-land     {&::before{content: "LAND";}}
+    &.-facade   {&::before{content: "FACADE"; white-space: nowrap;}}
+    &.-interior {&::before{content: "INTERIOR"; white-space: nowrap;}}
+    &.-eq       {&::before{content: "EQUIPMENT"; white-space: nowrap;}}
+
+    &.-shopping {&::before{content: "SHOPPING"; white-space: nowrap;}}
+    &.-park     {&::before{content: "PARK"; white-space: nowrap;}}
+    &.-other    {&::before{content: "OTHER"; white-space: nowrap;}}
 
     &.-layout{&::before{content: "LAYOUT PLAN / PLOT PLAN"; white-space: nowrap;}}  // レイアウト
     &.-house-layout{&::before{content: "HOUSE LAYOUT"; white-space: nowrap;}}       // ハウスレイアウト
